@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.35
+ * @version 0.13.36
  */
 @import "wcom-05-constants";
 *, *::before, *::after {
@@ -99,7 +99,7 @@ main {
         justify-content: space-between; position: absolute; width: 100%;
         h1, h2, h3, h4, h5 {
             font-family: #fonts[sans]; margin: 1rem; text-wrap: balance;
-            label {
+            label.separator {
                 display: inline-block; margin-right: 0.5rem;
                 min-width: @label-min-width; text-align: right;
             }
